# enocean-ble

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yml  hacs.yml  hassfest.yml
assets/branding/: SOURCE.md
custom_components/: __init__.py
custom_components/enocean_ble/: __init__.py  config_flow.py  const.py  crypto.py  event.py  manifest.json  parser.py  sensor.py
custom_components/enocean_ble/translations/: cs.json  de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt-BR.json  sv.json
docs/: ARCHITECTURE.md  CONFIG_FLOW.md  FLOW_TRACE_V3.md  OPERATIONS.md  PROJECT.md  README.md  ROADMAP.md  TROUBLESHOOTING.md
local_resources/: README.md
scripts/: ble_decode_poc.py  check_manifest.py  eoble.py  qr_parser_poc.py
tests/: conftest.py  test_button_events.py  test_crypto.py  test_flow_trace_v3.py  test_init.py  test_parser.py
